--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,64 +1,109 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
 
-  <a class="navbar-brand">
-    Mock Shop
-  </a>
+    <a class="navbar-brand">Mock Shop</a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarsExampleDefault"
+        aria-controls="navbarsExampleDefault"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+    >
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <!-- contains all of the navbar items -->
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <!-- contains all of the navbar items -->
+    <div
+        class="collapse navbar-collapse"
+        id="navbarsExampleDefault"
+    >
 
-    <!-- list items represents a link in the navigation bar -->
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/shopping-cart">
-          Shopping Cart
-        </a>
-      </li>
+        <!-- list items represents a link in the navigation bar -->
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a
+                    class="nav-link"
+                    routerLink="/shopping-cart"
+                >
+                    Shopping Cart
+                </a>
+            </li>
 
-      <!-- else block for the ngIf seen below -->
-      <ng-template #anonymousUser>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">
-            Login
-          </a>
-        </li>
-      </ng-template>
+            <!-- else block for the ngIf seen below -->
+            <ng-template #anonymousUser>
+                <li class="nav-item">
+                    <a
+                        class="nav-link"
+                        routerLink="/login"
+                    >
+                        Login
+                    </a>
+                </li>
+            </ng-template>
 
-      <!-- dropdown menu in the navigation bar -->
-      <li ngbDropdown *ngIf="appUser; else anonymousUser" class="nav-item dropdown">
-        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          {{appUser.name}}
-        </a>
+            <!-- dropdown menu in the navigation bar -->
+            <li
+                ngbDropdown
+                *ngIf="appUser; else anonymousUser"
+                class="nav-item dropdown"
+            >
+                <a
+                    ngbDropdownToggle
+                    class="nav-link dropdown-toggle"
+                    id="dropdown01"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                >
+                    {{appUser.name}}
+                </a>
 
-        <!-- here are all of the items in the dropdown menu-->
-        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" routerLink="/my-orders">
-            My Orders
-          </a>
+                <!-- here are all of the items in the dropdown menu -->
+                <div
+                    ngbDropdownMenu
+                    class="dropdown-menu"
+                    aria-labelledby="dropdown01"
+                >
+                    <a
+                        class="dropdown-item"
+                        routerLink="/my-orders"
+                    >
+                        My Orders
+                    </a>
 
-          <!-- render these two links if the user is an admin, inside ng-container -->
-          <ng-container *ngIf="!isAdmin">
-            <a class="dropdown-item" routerLink="/admin/orders">
-              Manage Orders
-            </a>
-            <a class="dropdown-item" routerLink="/admin/products">
-              Manage Products
-            </a>
-          </ng-container>
-          
-          <a class="dropdown-item" (click)="logout()">Log Out</a>
+                    <!-- render these two links if the user is an admin, inside ng-container -->
+                    <ng-container *ngIf="!isAdmin">
+                        <a
+                            class="dropdown-item"
+                            routerLink="/admin/orders"
+                        >
+                            Manage Orders
+                        </a>
+                        <a
+                            class="dropdown-item"
+                            routerLink="/admin/products"
+                        >
+                            Manage Products
+                        </a>
+                    </ng-container>
 
-        </div> <!-- /here are all of the items in the dropdown menu-->
+                    <a
+                        class="dropdown-item"
+                        (click)="logout()"
+                    >
+                        Log Out
+                    </a>
 
-      </li> <!-- /dropdown menu in the navigation bar -->
+                </div>
+                <!-- /here are all of the items in the dropdown menu -->
 
-    </ul> <!-- /list items represents a link in the navigation bar -->
+            </li>
+            <!-- /dropdown menu in the navigation bar -->
 
-  </div>
+        </ul>
+        <!-- /list items represents a link in the navigation bar -->
+
+    </div>
 </nav>
